(HP-727) Fix layout bug with visually hidden element If element has width:100% and class visually-hidden, its size can be > 100% and horizontal scroll bar appears.

--- a/src/common/cssHelpers/form.module.css
+++ b/src/common/cssHelpers/form.module.css
@@ -100,6 +100,7 @@
 .visually-hidden {
   clip-path: polygon(0 0, 0 0, 0 0, 0 0);
   composes: hiddenFromScreen from '~hds-core/lib/base.css';
+  width: 1px;
 }
 
 .list {
